Fixed cover hero display bug on Firefox (#39178822163572)

--- a/assets/css/modules/_story.scss
+++ b/assets/css/modules/_story.scss
@@ -72,8 +72,8 @@
 		.story-header {
 			position: relative;
 			padding: 0;
-			width: 100%;
-			height: 100%;
+			width: 100%;/*
+			height: 100%;*/
 		}
 
 		.story-footer {
@@ -120,7 +120,7 @@
 			@include bp(m) {
 				position: absolute;
 				bottom: 0;
-				z-index: 1;
+				z-index: 2;
 				padding: 0 $baseline * 2;
 			}
 
